# word-rest-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml  migrations.sql  seed_vocabulary.sql
.github/: GITHUB_SECRETS_GUIDE.md  SETUP.md  STAGING_SETUP.md
.github/workflows/: deploy-staging.yml  deploy.yml
scripts/: seed_db.sh  setup-github-actions.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs
src/handlers/: mod.rs  posts.rs  users.rs  vocabulary.rs
src/models/: mod.rs  post.rs  user.rs  vocabulary.rs
